fixed text align

--- a/src/elements/PasswordInput/password-input.less
+++ b/src/elements/PasswordInput/password-input.less
@@ -73,6 +73,7 @@
 	margin-top: 6px;
 	color: white !important; // using !important here to override "primary" class of ui-button
 	text-transform: none !important; // using !important here to override "primary" class of ui-button
+	text-align: left !important; // using !important here to override "primary" class of ui-button
 }
 
 .ui-select-wrap {
